tests/invalid/loops/too_many_for_clauses.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    for (;;;)
        3;
    return 0;
}